[package]
name = "rhai-http"
version = "0.4.0"
edition = "2021"
authors = ["ltabis <ltabis.pro@gmail.com>"]
description = "HTTP module for the rhai scripting language"
license-file = "./LICENSE"
repository = "https://github.com/ltabis/rhai-http"

[dependencies]
rhai = { version = "1.22.2", default-features = false, features = ["serde"] }
reqwest = { version = "0.12.20", default-features = false, features = [
    "blocking",
    "json",
    "rustls-tls",
] }
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
