[package]
name = "rhai-http"
version = "0.5.2"
edition = "2021"
authors = ["ltabis <ltabis.pro@gmail.com>"]
description = "HTTP module for the rhai scripting language"
license-file = "./LICENSE"
repository = "https://github.com/ltabis/rhai-http"

[dependencies]
rhai = { version = "1.23.6", default-features = false, features = ["serde"] }
reqwest = { version = "0.12.24", default-features = false, features = [
    "blocking",
    "json",
    "rustls-tls",
] }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
